--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@ button{ cursor:pointer; }
   <div id="top">
     <div id="title">法楽寺（神経衰弱）：GAME</div>
     <div id="modeSelect">
-      <button class="modeBtn" data-mode="text">文字</button>
-      <button class="modeBtn" data-mode="image">画像</button>
+      <button class="modeBtn" data-mode="text">文字と文字</button>
+      <button class="modeBtn" data-mode="image">画像と画像</button>
       <button class="modeBtn" data-mode="both">文字と画像</button>
     </div>
   </div>
